--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,9 @@ body{
     font-family: 'Poppins', sans-serif;
     background-color:#E5E5E5;
 }
+a{
+    text-decoration:none;
+}
 .hr-design{
     border:1px solid #ddd;
     margin:30px 0;
@@ -26,7 +29,7 @@ main{
 .top-players{
     
 }
-.top-players .top-player-title{
+.section-title{
     margin-bottom:35px;
     color:#562EFF;
     font-size:18px;
@@ -49,4 +52,26 @@ main{
     margin-left:16px;
     font-size:18px;
     line-height:27px;
+}
+/* Top Blog Style Section  */
+.blogs{
+    display:grid;
+    grid-template-columns:repeat(2,1fr);
+    row-gap:26px;
+}
+.blog{
+    display:flex;
+}
+.blog .thumnail img{
+    width:177px;
+    height:117px;
+}
+.blog .blog-info{
+    margin-left:16px;
+}
+.blog .blog-info .blog-title{
+    font-size:20px;
+}
+.blog .blog-info .autor-by{
+    color:#999898;
 }
